--- a/app/src/main/res/layout/rv_add_friend.xml
+++ b/app/src/main/res/layout/rv_add_friend.xml
@@ -56,7 +56,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/Corners01" />
+        app:srcCompat="@drawable/corners01" />
 
     <Button
         android:id="@+id/viewProfileButton"
